Bug #44653 (Invalid namespace name resolution)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@257018 c90b9560-bf6c-de11-be94-00142212c4b1